--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -16,5 +16,5 @@
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#53ac6f",
-  "background_color": "#ffffff"
+  "background_color": "#53ac6f"
 }
