--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,15 @@
 {
   "short_name": "Transcribe",
   "name": "Transcribe",
+  "description": "Transcribe audio to text",
   "icons": [
     {
-      "src": "/assets/icon.svg",
+      "src": "/icon.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     },
     {
-      "src": "/assets/icon.png",
+      "src": "/icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
