chore: update repo

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,6 +10,6 @@ jobs:
     uses: cloud-cli/workflows/.github/workflows/docker-ghcr-build.yml@main
     with:
       baseImage: cloud-cli/node:latest
-      type: node
+      type: static
       withSha: false
       withTag: true
